--- a/n320projects/tictactoe/src/App.css
+++ b/n320projects/tictactoe/src/App.css
@@ -1,10 +1,37 @@
-.crop {
-  width: 50px;
-  height: 30px;
-  border: 1px solid #333;
-  margin-right: 5px;
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(45deg, #fdbb2d, #b21f1f, #1a2a6c);
+  color: white;
+  font-family: 'Arimo', sans-serif;
+}
+
+.box {
+  width: 100px;
+  height: 100px;
   text-align: center;
-  line-height: 30px;
+  line-height: 100px;
+  background: white;
+  opacity: 0.5;
+  color: #2e2e2e;
+  font-size: 48px;
+}
+
+.box:not(:last-child) {
+  margin-right: 5px;
+}
+
+h1 {
+  font-size: 62px;
+}
+
+#root {
+  text-align: center;
 }
 
 .row {
